# haskell-flappy-bird

./: .gitignore  README.md  brick-tac-toe.cabal  haskell-flappy-bird.cabal  stack.yaml  test.txt
.stack-work/: stack.sqlite3
.stack-work/ghci/2fbb3e54/: cabal_macros.h
.stack-work/ghci/3ee11b3c/: cabal_macros.h
.stack-work/ghci/d984b17a/: cabal_macros.h
src/: Control.hs  Main.hs  Model.hs  Snake.hs  UI.hs  View.hs
test/: unittest.hs
