name:                brick-tac-toe
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          rjhala@eng.ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable brick-tac-toe
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick,
                       bytestring,
                       network,
                       mtl,
                       MissingH,
                       split,
                       linear,
                       lens,
                       transformers,
                       extra,
                       QuickCheck
  hs-source-dirs:      src
  other-modules:       View, 
                       Control,
                       Model, 
                       Model.Board,
                       Model.Score,
                       Model.Player
		       
  default-language:    Haskell2010
  ghc-options:       -W -threaded

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  Default-Extensions: OverloadedStrings
  main-is:          unittest.hs
  build-depends:    base, 
                    containers, 
                    mtl,
                    filepath,
                    QuickCheck,
                    process
  other-modules:    Common 