name:                haskell-flappy-bird
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          rjhala@eng.ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskell-flappy-bird
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick,
                       bytestring,
                       network,
                       mtl,
                       MissingH,
                       split,
                       linear,
                       lens,
                       transformers,
                       extra,
                       QuickCheck
  hs-source-dirs:      src
  other-modules:       View, 
                       Control,
                       Model
		  
  default-language:    Haskell2010
  ghc-options:       -W -threaded
